# AIMOP

./: .env.example  .gitignore  README.md  aimo3_strategy.md  pyproject.toml
.claude/commands/: kaggle-setup.md
.claude/develop/: architecture.md  tips.md
.claude/skills/colab-adapt/: SKILL.md
.claude/skills/kaggle-start/: SKILL.md
.github/workflows/: kaggle-push-deepseek-r1-32b.yml  kaggle-push-t0.5.yml  kaggle-push-t0.65.yml  kaggle-push.yml
main/: kernel-metadata.json
notebooks/deepseek-r1-32b/: deepseek-r1-32b.ipynb  kernel-metadata.json
notebooks/gpt-oss-t0.5/: gpt-oss-120b-t0.5-structured-entropy.ipynb  kernel-metadata.json
notebooks/gpt-oss-t0.65/: gpt-oss-120b-t0.65-structured-entropy.ipynb  kernel-metadata.json
scripts/: setup.sh
src/: answer-evolve.ipynb
