[project]
name = "aimop"
version = "0.1.0"
description = "Kaggle competition: AIMOP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.6",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "nbformat>=5.9",
    "kaggle-notebook-deploy>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
